--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -1,5 +1,5 @@
 header {
-    height: 120px;
+    height: 90px;
 }
 
 #navbar {
@@ -9,7 +9,9 @@ header {
     overflow: visible;
     justify-content: space-between;
     align-items: center;
-    margin: 0 10px;
+    padding: 0 10px;
+    z-index: 3;
+    background-color: wheat;
 }
 
 #navbar ul {
@@ -25,6 +27,7 @@ header {
 }
 
 #navbar img {
-    width: 110px;
-    padding: 10px;
+    width: 90px;
+    inset: 0;
+    margin: auto;
 }
