--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -11,7 +11,8 @@ header {
     align-items: center;
     padding: 0 10px;
     z-index: 3;
-    background-color: wheat;
+    background-color: #FBF9F9;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 
 #navbar ul {
