--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,8 +1,16 @@
 @import url(./navbar.css);
 @import url(./inicio.css);
+@import url(./somos.css);
 
 body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    background-color: #FBF9F9;
+    color: #2F2C2C;
+    font-family: Poppins, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+section[id] {
+    scroll-margin-top: 90px;
 }
