--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3,6 +3,7 @@
 @import url(./somos.css);
 @import url(./programs.css);
 @import url(./form.css);
+@import url(./contact.css);
 
 body {
     padding: 0;
