--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -57,10 +57,19 @@ input, select {
     height: 2rem;
     border-radius: 4px;
     border-style: none;
-    background-color: #FBD513;
-    color: #F8F6F6;
+    background-color: #F8F6F6;
+    color: #8D9CAA;
     padding-left: 10px;
     font-size: 0.9em;
+    transition: 
+        background-color 300ms linear,
+        color 300ms linear;
+}
+
+input:focus, select:active, select:focus {
+    background-color: #FBD513;
+    color: #F8F6F6;
+    transition-duration: 500ms;
 }
 
 #submit {
@@ -69,6 +78,16 @@ input, select {
     padding: auto;
     font-family: 'Poppins', sans-serif;
     background-color: #8D9CAA;
+    color: #F8F6F6;
+    transition: 
+        color 300ms linear,
+        background-color 300ms linear;
+}
+
+#submit:hover {
+    background-color: #F8F6F6;
+    color: #8D9CAA;
+    transition-duration: 500ms;
 }
 
 details > summary {
@@ -83,4 +102,14 @@ details > p {
 
 details[open], details {
     width: 400px;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    #submit {
+        transition: none;
+    }
+
+    input:focus, select:active, select:focus {
+        transition: none;
+    }
 }
