--- a/stylesheets/programs.css
+++ b/stylesheets/programs.css
@@ -15,6 +15,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 60px;
+    place-content: center;
 }
 
 .program p {
